<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <View
        android:id="@+id/vGoogle2"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyHaveAccount" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:lineSpacingExtra="10sp"
        android:text="@string/create_an_a"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:translationY="-5.25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreate" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/login"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:background="#0BCE83"
        android:text="Create an Account"
        android:textColor="#5D4037"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="152dp"
        android:layout_height="21dp"
        android:text="@string/AlreadyHaveAccount"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <View
        android:id="@+id/vGoogle"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyHaveAccount" />

    <ImageView
        android:id="@+id/ivMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="@+id/vGoogle"
        app:layout_constraintStart_toStartOf="@+id/vGoogle"
        app:layout_constraintTop_toTopOf="@+id/vGoogle" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="173dp"
        android:layout_height="27dp"
        android:text="Continue with Gmail"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/vGoogle"
        app:layout_constraintEnd_toEndOf="@+id/vGoogle"
        app:layout_constraintStart_toEndOf="@+id/ivMail"
        app:layout_constraintTop_toTopOf="@+id/vGoogle" />

    <View
        android:id="@+id/vFacebook"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vGoogle2" />

    <ImageView
        android:id="@+id/ivPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="@+id/vFacebook"
        app:layout_constraintStart_toStartOf="@+id/vFacebook"
        app:layout_constraintTop_toTopOf="@+id/vFacebook"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="173dp"
        android:layout_height="21dp"
        android:inputType="number"
        android:phoneNumber="true"
        android:text="Continue with Mobile"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/vFacebook"
        app:layout_constraintEnd_toEndOf="@+id/vFacebook"
        app:layout_constraintStart_toEndOf="@+id/ivPhone"
        app:layout_constraintTop_toTopOf="@+id/vFacebook" />


</androidx.constraintlayout.widget.ConstraintLayout>